[project]
name = "groundingdino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "addict>=2.4.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pycocotools>=2.0.10",
    "supervision>=0.22.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
    "yapf>=0.43.0",
]
